--- a/Calculator_09/local.properties
+++ b/Calculator_09/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Sun Apr 05 20:58:13 ICT 2020
-sdk.dir=C\:\\Users\\Admin\\AppData\\Local\\Android\\Sdk
+#Tue Apr 07 12:24:51 ICT 2020
+sdk.dir=C\:\\Users\\HP\\AppData\\Local\\Android\\Sdk
